Agrego la configuración para realizar el despliegue
